--- a/styles/style.css
+++ b/styles/style.css
@@ -737,6 +737,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   line-height: 50px;
+  outline: none;
 }
 
 .form__input::-moz-placeholder {
@@ -754,7 +755,6 @@ body {
 }
 
 .placeholder-messege::-webkit-input-placeholder {
-  color: #bdae82;
   position: relative;
   top: -25px;
 }
