--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,7 @@
-$txt-color: #fff; 
+$txt-color: rgb(253, 249, 241); 
 $color: #ffffff00; 
 $bg-color: #000;
 $decor-color: #beaf83;// rgba(189, 174, 130, 1);
-
 
 @mixin standart-text {
   font: {
@@ -68,7 +67,6 @@ body {
   z-index: 2;
   background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
   z-index: 4;
-
 }
 .logo {
   position: relative;
@@ -96,9 +94,7 @@ body {
   }
 }
 
-
 @media (min-width: 600px) and (max-width: 835.9px) {
-
   .navig {
     width: 20%;
     position: relative;
@@ -119,9 +115,7 @@ body {
   align-items: center;
 }
 
-
 @media (max-width: 835.9px) {
-
   .nav {
     position: absolute;
     top: 0px;
@@ -178,9 +172,7 @@ body {
   justify-content: space-between;
   gap: 8px;
 }
-
 @media (max-width: 835.9px) {
-
   .leng {
     width: 51%;
   }
@@ -199,17 +191,13 @@ body {
   color: $decor-color;
 }
 
-
 @media screen and (min-width: 836px) {
-
   .burger {
     display: none;
   }
 }
 
-
 @media (max-width: 835.9px) {
-
   .burger {
     display: block;
     width: 50px;
@@ -278,9 +266,7 @@ body {
   margin-top: 100px;
 }
 
-
 @media (min-width: 650px) and (max-width: 999.9px) {
-
   .section {
     margin-top: 60px;
   }
@@ -316,7 +302,6 @@ body {
 }
 .signature {
   position: absolute;
-
   right: 5.5%;
   top: 20%;
   width: 34%;
@@ -375,8 +360,10 @@ body {
 .signature__button {
   width: 85%;
   height: 16.5%;
+  padding: 2px;
   position: relative;
   bottom: 0px;
+  @include other-text;
   background-color: #beaf83;
   margin-top: 37px;
   display: flex;
@@ -385,6 +372,10 @@ body {
   align-self: center;
   font-size: 2.5vw;
   cursor: pointer;
+  border: 1px solid $bg-color;
+  border-radius: 6px;
+  object-fit: cover;
+  text-align: center;
 }
 
 @media (min-width: 700px) and (max-width: 800px) {
@@ -566,6 +557,10 @@ body {
     top: 60%;
   }
 
+  .errow-right {
+    transform: rotate(180deg);
+  }
+
 @media (min-width: 750.1px) and (max-width: 1000px) {
   .slider {
     width: 86%;
@@ -730,6 +725,8 @@ body {
       justify-content: center;
       padding-top: 43px;
       padding-bottom: 40px;
+      border-radius: 5px;
+      object-fit: cover;
     }
 
     @media (max-width: 1000px) {
@@ -786,11 +783,13 @@ body {
 
       .prise-variant__button {
         @include standart-text;
-        height: 55px;
+        min-height: 55px;
         width: 50%;
         margin: 39px auto 0px auto;
         background-color: $decor-color;
         cursor: pointer;
+        border-radius: 5px;
+        object-fit: cover;
       }
 
       @media (max-width: 1000px) {
@@ -802,12 +801,81 @@ body {
       .prise-variant__button:hover {
         color: $txt-color;
       }
+
+
+      .pop-up {
+        position: fixed;
+        left: -50000px;
+        width: 80%;
+        background-color: $txt-color;
+        padding: 0;
+        border-radius: 6px;
+        object-fit: cover;
+        z-index: 4;
+      }
+
+
+      .pop-up-active {
+        position: absolute;
+        left: 10%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 80%;
+        background-color: $txt-color;
+        padding: 0;
+        border-radius: 6px;
+        object-fit: cover;
+      }
+
+      @media (min-width: 1000px) {
+        .pop-up-active {
+          width: 60%;
+          left: 20%;
+        }
+      }
+
+      .form.prises-form {
+        position: relative;
+        left: 0;
+        top: 0;
+        margin: auto;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .prises-form__title {
+        @include other-text;
+        font-size: 4vw;
+        line-height: 100%;
+        padding: 0 20px;
+        //padding-left: 0px;
+        color: $bg-color;
+        background-color: $txt-color;
+        text-align: center;
+      }
+
+      @media (min-width: 1000px) {
+        .prises-form__title {
+          line-height: 120%;
+        }
+      }
+      .section__title.prises-form__title {
+        margin-top: 30px;
+        font-size: 4.5vw;
+      }
+
+      .form__button.prises-form__button {
+        margin-bottom: 30px;
+      }
+      
       //XXXXXXXXXXXXXXXXXXXXXXXX 
 
       .contact-foto {
         width: 99.5%;
       }
-
       @media (max-width: 1100px) {
         .section-contacts {
           margin-top: 80px;
@@ -816,10 +884,10 @@ body {
       }
       .form {
         color: $bg-color;
-        width: 40%;
+        width: 45%;
         position: absolute;
-        left: 1%;
-        top: 3%;
+        left: 5%;
+        top: 15%;
       }
 
       @media (max-width: 1100px) {
@@ -855,6 +923,8 @@ body {
           margin: 20px 0;
           background-color: hsla(0, 0%, 0%, 0);
           border: 3px solid $bg-color;
+          border-radius: 6px;
+          object-fit: cover;
         }
 
         @media (max-width: 1100px) {
@@ -881,16 +951,16 @@ body {
         .form__input::-moz-placeholder { //в Firefox
           color: $bg-color; 
         }
-        
-        .form__input::-webkit-input-placeholder { //В Safari и Chrome
-          color: $bg-color; 
-        }
-        
+
         .placeholder-messege::-moz-placeholder { //в Firefox
           color: $bg-color; 
           position: relative;
           top: -25px;
         }
+
+        .form__input::-webkit-input-placeholder { //В Safari и Chrome
+          color: $bg-color; 
+        }       
 
         .placeholder-messege::-webkit-input-placeholder { //В Safari и Chrome
           //color: $decor-color; 
@@ -907,6 +977,8 @@ body {
           margin-left: auto;
           margin-right: auto;
           cursor: pointer;
+          border-radius: 6px;
+          object-fit: cover;
         }
 
         @media (max-width: 1100px) {
@@ -921,6 +993,7 @@ body {
         .form__button:hover {
           color: $txt-color;
         }
+
 
         .link__title {
           font-size: 3vw;
@@ -967,7 +1040,6 @@ body {
             width: 70px;
           }
         }
-
         //XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX 
 
         .footer {
