--- a/styles/style.scss
+++ b/styles/style.scss
@@ -263,7 +263,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 5%;
 }
 
 @media (min-width: 650px) and (max-width: 999.9px) {
@@ -437,7 +437,7 @@ body {
     grid-template-rows: 1fr 1fr;
     width: 83.5%;
     margin-top: 47px;
-    margin-bottom: 63px;
+    //margin-bottom: 63px;
   }
 }
 
