feat: add title of site

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -874,7 +874,7 @@ body {
       //XXXXXXXXXXXXXXXXXXXXXXXX 
 
       .contact-foto {
-        width: 99.5%;
+        width: 99.9%;
       }
       @media (max-width: 1100px) {
         .section-contacts {
@@ -1044,7 +1044,7 @@ body {
 
         .footer {
           width: 100%;
-          padding: 50px 20px;
+          padding: 2% 20px;
           display: flex;
           flex-direction: row;
           justify-content: space-between;
