--- a/styles/style.css
+++ b/styles/style.css
@@ -852,7 +852,7 @@ body {
 }
 
 .contact-foto {
-  width: 99.5%;
+  width: 99.9%;
 }
 
 @media (max-width: 1100px) {
@@ -1026,7 +1026,7 @@ body {
 
 .footer {
   width: 100%;
-  padding: 50px 20px;
+  padding: 2% 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
